klipper: activate input shaping, refactor configs

--- a/firmware/config/klipper/bed_leveling.cfg
+++ b/firmware/config/klipper/bed_leveling.cfg
@@ -1,11 +1,37 @@
 ######################################################################
-# Bed Leveling / Bed Mesh
+# Bed Leveling / BLTouch / Bed Mesh
 ######################################################################
 
 #    Probe Offset
-#      x_offset: -45.4
-#      y_offset: -8.2
+#      x_offset: -45.2
+#      y_offset: -6.90
 #      z_offset: 3.30
+
+[bltouch]
+sensor_pin: ^PB1
+control_pin: PB0
+x_offset: -45.2
+y_offset: -6.9
+#z_offset: 0 # run probe calibrate, update printer.cfg via SAVE_CONFIG command
+speed: 5.0
+sample_retract_dist: 8.0
+samples: 2
+
+[safe_z_home]
+home_xy_position: 155.2, 116.90
+#   X and Y coordinate (e.g. 100, 100) where the Z homing should be performed. Required.
+speed: 100.0
+#   Speed at which the toolhead is moved to the safe Z home coordinate. Default 50 mm/s.
+z_hop: 10.0
+#   Distance (in mm) to lift the Z axis prior to homing. This is applied to any homing command,
+#   even if it doesn't home the Z axis. If the Z axis is already homed and the current Z
+#   position is less than z_hop, then this will lift the head to a height of z_hop. If the Z axis
+#   is not already homed the head is lifted by z_hop. The default is to not implement Z hop.
+z_hop_speed: 5.0
+#   Speed (in mm/s) at which the Z axis is lifted prior to homing. Default is 15 mm/s.
+# move_to_previous: False
+#   When set to True, the X and Y axes are reset to their previous positions after Z axis homing.
+#   The default is False.
 
 [bed_screws]
 screw1: 70.5,37.5
@@ -19,13 +45,13 @@ screw4_name: rear left screw
 horizontal_move_z: 10
 
 [screws_tilt_adjust]
-screw1: 70.5,37.5
+screw1: 70.5,30.0
 screw1_name: front left screw
-screw2: 200,37.5
+screw2: 219.9,30.0
 screw2_name: front right screw
-screw3: 200,207.5
+screw3: 219.9,200.0
 screw3_name: rear right screw
-screw4: 70.5,207.5
+screw4: 70.5,200.0
 screw4_name: rear left screw
 horizontal_move_z: 10
 screw_thread: CW-M4
@@ -46,6 +72,10 @@ probe_count: 7,7
 algorithm: bicubic
 #   The interpolation algorithm to use. May be either "lagrange" or "bicubic". This option will not
 #   affect 3x3 grids, which are forced to use lagrange sampling. Default is lagrange.
+zero_reference_position: 155.2, 116.90
+#   Optional X,Y coordinate that specifies the location on the bed where Z = 0.  When specified
+#   the mesh will be offset so that zero Z adjustment occurs at this location.  The default is
+#   no zero reference.
 #### Uses Default / Not Used ####
 # horizontal_move_z: 5
 #   Height (mm) that head should be commanded to move to just prior to starting a probe operation.
@@ -73,10 +103,6 @@ algorithm: bicubic
 #   When using the bicubic algorithm the tension parameter above may be applied to change the
 #   amount of slope interpolated. Larger numbers will increase the amount of slope, which results
 #   in more curvature in the mesh. Default .2.
-# zero_reference_position:
-#   Optional X,Y coordinate that specifies the location on the bed where Z = 0.  When specified
-#   the mesh will be offset so that zero Z adjustment occurs at this location.  The default is
-#   no zero reference.
 # faulty_region_1_min:
 # faulty_region_1_max:
 #   Optional points that define a faulty region.  See docs/Bed_Mesh.md for details on faulty
