--- a/firmware/config/klipper/moonraker.conf
+++ b/firmware/config/klipper/moonraker.conf
@@ -112,8 +112,7 @@ cors_domains:
 channel: dev
 refresh_interval: 168
 
-# [file_manager]
-# moonraker.conf
+[file_manager]
 # queue_gcode_uploads: False
 #   When set to True the file manager will add uploads to the job_queue when the
 #  `start_print` flag has been set.  The default if False.
@@ -190,3 +189,14 @@ refresh_interval: 168
 #   The aspect ratio to display for the camera.  Note that this option
 #   is specific to certain services, otherwise it is ignored.
 #   The default is 4:3.
+
+# Crowsnest update_manager entry
+
+[update_manager crowsnest]
+type: git_repo
+path: ~/crowsnest
+origin: https://github.com/mainsail-crew/crowsnest.git
+managed_services: crowsnest
+install_script: tools/pkglist.sh
+
+[include crowsnest.conf]
