--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -20,7 +20,7 @@
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 #   The serial port to connect to the MCU
 baud: 250000
-# Baud rate to use. Default 250000.
+# Baud rate to use. Default 250000
 restart_method: command
 #   This controls the mechanism the host will use to reset the micro-controller.
 #   The choices are 'arduino', 'cheetah', 'rpi_usb', 'command'. The 'arduino'
@@ -99,7 +99,7 @@ microsteps: 16
 rotation_distance: 4
 endstop_pin: ^PA7
 position_min: -5 # Use negative value here for BLTouch probe negative z_offset
-position_max: 300
+position_max: 245
 endstop_pin: probe:z_virtual_endstop
 # position_endstop: 0.0
 #    If using "probe:z_virtual_endstop" then do not define a position_endstop in the
@@ -110,7 +110,7 @@ step_pin: PB4
 dir_pin: PB3
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 7.7 # Was 32.342
+rotation_distance: 7.492 # Was 32.342
 # full_steps_per_rotation:
 # gear_ratio:
 #   See the "stepper" section for a description of the above parameters. If none of the
@@ -146,7 +146,6 @@ pressure_advance: 0.0 # <-----------NEED TO TUNE --------->
 #   200ms. This setting only applies if pressure_advance is non-zero. The default is 0.040 (40 ms).
 ###########################################################
 # The remaining variables describe the [extruder] heater. #
-###########################################################
 heater_pin: PA1 # PWM output pin controlling the heater. Required
 sensor_type: PT1000 # Was: EPCOS 100K B57560G104F
 #   Type of sensor - common thermistors are "EPCOS 100K B57560G104F", "ATC Semitec 104GT-2",
@@ -209,61 +208,34 @@ min_temp: 0
 max_temp: 135
 
 ######################################################################
-# BLTouch / Homing
+# Bed Leveling / BLTouch / Homing / Bed Mesh
 ######################################################################
-
-[bltouch]
-sensor_pin: ^PB1
-control_pin: PB0
-x_offset: -45.4
-y_offset: -8.2
-#z_offset: 0 # must be postiive number but we have negaive Z offset, run probe calibrate
-speed: 5.0
-sample_retract_dist: 8.0
-samples: 2
-
-[safe_z_home]
-home_xy_position: 117.5, 117.5
-#   X and Y coordinate (e.g. 100, 100) where the Z homing should be performed. Required.
-speed: 100.0
-#   Speed at which the toolhead is moved to the safe Z home coordinate. Default 50 mm/s.
-z_hop: 10.0
-#   Distance (in mm) to lift the Z axis prior to homing. This is applied to any homing command,
-#   even if it doesn't home the Z axis. If the Z axis is already homed and the current Z
-#   position is less than z_hop, then this will lift the head to a height of z_hop. If the Z axis
-#   is not already homed the head is lifted by z_hop. The default is to not implement Z hop.
-z_hop_speed: 5.0
-#   Speed (in mm/s) at which the Z axis is lifted prior to homing. Default is 15 mm/s.
-# move_to_previous: False
-#   When set to True, the X and Y axes are reset to their previous positions after Z axis homing.
-#   The default is False.
-
-######################################################################
-# Bed Leveling / Bed Mesh
-######################################################################
-
 [include bed_leveling.cfg]
 
 ######################################################################
 # Filament Runout and Swap 
 ######################################################################
-
 [include filament_motion_sensor.cfg]
 
 ######################################################################
-# Resonance Compensation / Input Shaping
+# Resonance and Axis Compensation / Input Shaping / Accelerometer
 ######################################################################
+#    Input Shaping
+[include input_shaping.cfg]
 
-#    Accelerometer
-[include bigtreetech-adxl345-v2.0.cfg]
-#    Config
-# [include input_shaper.cfg]
+#    Axis Twist Compensation
+[include axis_twist_compensation.cfg]
 
 ######################################################################
 # Macros
 ######################################################################
-
 [include macros.cfg]
+
+# <------------------------------------------------------------------->
+# END OF USER CONFIGIGURATION
+#
+# The following is added automatically when using SAVE_CONFIG command
+# <------------------------------------------------------------------->
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -281,18 +253,18 @@ z_hop_speed: 5.0
 #*# pid_kd = 90.217
 #*#
 #*# [bltouch]
-#*# z_offset = 3.330
+#*# z_offset = 3.314
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.027500, 0.010625, 0.024375, -0.018750, 0.019375, -0.038125, -0.035000
-#*# 	  0.053750, 0.033750, 0.051250, 0.005625, 0.036250, -0.003125, 0.006875
-#*# 	  0.002500, 0.000625, 0.024375, -0.010625, 0.016875, -0.003125, 0.005000
-#*# 	  -0.011875, -0.025000, 0.007500, -0.026875, -0.003750, -0.025000, -0.012500
-#*# 	  -0.003750, -0.020625, -0.008125, -0.035625, -0.015000, -0.031875, -0.016875
-#*# 	  -0.003750, -0.011875, 0.002500, -0.031875, -0.011875, -0.022500, -0.008125
-#*# 	  -0.006250, -0.024375, -0.001250, -0.023125, -0.002500, -0.012500, 0.006250
+#*# 	  -0.103332, -0.116739, -0.083787, -0.070480, -0.064045, -0.055738, -0.043056
+#*# 	  -0.027029, -0.050436, -0.019359, -0.019802, -0.022117, -0.004435, -0.013628
+#*# 	  -0.049477, -0.048509, -0.009931, -0.000374, 0.006061, 0.019368, 0.023300
+#*# 	  -0.031807, -0.047714, -0.013512, -0.014580, -0.021270, 0.002662, -0.006531
+#*# 	  -0.006513, -0.031170, -0.000092, -0.004285, -0.001600, -0.000168, -0.001861
+#*# 	  0.021905, -0.012127, 0.017076, 0.010383, 0.008693, 0.012000, 0.022182
+#*# 	  0.006573, -0.017459, 0.024869, 0.007551, 0.013986, 0.016668, 0.026225
 #*# x_count = 7
 #*# y_count = 7
 #*# mesh_x_pps = 2
@@ -303,3 +275,53 @@ z_hop_speed: 5.0
 #*# max_x = 173.98
 #*# min_y = 18.0
 #*# max_y = 199.97999999999996
+#*#
+#*# [bed_mesh Glass Cold]
+#*# version = 1
+#*# points =
+#*# 	0.025000, 0.004375, 0.025000, 0.008750, 0.016875, 0.001250, -0.003750
+#*# 	0.062500, 0.021250, 0.061875, 0.037500, 0.032500, 0.019375, 0.022500
+#*# 	0.028125, 0.014375, 0.054375, 0.022500, 0.028125, 0.027500, 0.028125
+#*# 	0.028750, 0.021875, 0.051250, 0.021250, 0.012500, 0.008750, 0.014375
+#*# 	0.061875, 0.028125, 0.055625, 0.010000, 0.010625, -0.002500, -0.009375
+#*# 	0.079375, 0.040625, 0.066875, 0.031875, 0.026250, 0.015000, 0.005000
+#*# 	0.076250, 0.040000, 0.064375, 0.026875, 0.019375, 0.008750, 0.012500
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 10.0
+#*# max_x = 173.98
+#*# min_y = 18.0
+#*# max_y = 199.97999999999996
+#*#
+#*# [bed_mesh Glass 60 C]
+#*# version = 1
+#*# points =
+#*# 	0.001531, -0.012219, 0.022156, 0.017781, 0.019031, 0.016531, 0.024656
+#*# 	0.050906, 0.028406, 0.061531, 0.057781, 0.047781, 0.045906, 0.042156
+#*# 	0.012156, 0.006531, 0.052781, 0.037156, 0.049031, 0.042781, 0.037781
+#*# 	0.010906, 0.007781, 0.050281, 0.017156, 0.004031, 0.004656, 0.011531
+#*# 	0.022156, 0.003406, 0.034656, 0.005281, -0.005344, -0.017844, -0.024719
+#*# 	0.042781, 0.001531, 0.040281, 0.010281, -0.005969, -0.020969, -0.024719
+#*# 	0.011531, -0.020344, 0.024656, -0.023469, -0.027844, -0.027219, -0.032844
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 10.0
+#*# max_x = 173.98
+#*# min_y = 18.0
+#*# max_y = 199.97999999999996
+#*#
+#*# [axis_twist_compensation]
+#*# z_compensations = -0.010208, -0.003958, 0.014167
+#*# compensation_start_x = 20.0
+#*# compensation_end_x = 174.0
+#*# zy_compensations = -0.000417, -0.004167, 0.004583
+#*# compensation_start_y = 20.0
+#*# compensation_end_y = 210.0
