--- a/firmware/config/klipper/input_shaping.cfg
+++ b/firmware/config/klipper/input_shaping.cfg
@@ -1,3 +1,22 @@
+# This file contains common pin mappings for the bigtreetech adxl345 v2.0
+# To use this config, the firmware should be compiled for the
+# RP2040 with "USB"
+# The micro-controller will be used to control the components on the nozzle.
+
+# See docs/Config_Reference.md for a description of parameters.
+
+[mcu btt_adxl345]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_5044506128C0281C-if00
+
+[adxl345]
+cs_pin: btt_adxl345:gpio9
+#spi_bus: spi1a
+spi_software_sclk_pin: btt_adxl345:gpio10
+spi_software_mosi_pin: btt_adxl345:gpio11
+spi_software_miso_pin: btt_adxl345:gpio8
+axes_map: -x,-z,y #x,y,z
+
+[input_shaper]
 #shaper_freq_x: 0
 #   A frequency (in Hz) of the input shaper for X axis. This is
 #   usually a resonance frequency of X axis that the input shaper
@@ -28,13 +47,14 @@
 #   good all-round value for most printers. In most circumstances this
 #   parameter requires no tuning and should not be changed.
 
-#[resonance_tester]
-#probe_points:
+
+[resonance_tester]
+probe_points: 100, 100, 20
 #   A list of X, Y, Z coordinates of points (one point per line) to test
 #   resonances at. At least one point is required. Make sure that all
 #   points with some safety margin in XY plane (~a few centimeters)
 #   are reachable by the toolhead.
-#accel_chip:
+accel_chip: adxl345
 #   A name of the accelerometer chip to use for measurements. If
 #   adxl345 chip was defined without an explicit name, this parameter
 #   can simply reference it as "accel_chip: adxl345", otherwise an
@@ -82,3 +102,17 @@
 #   disables slow sweeping moves. Avoid setting it to a too small
 #   non-zero value in order to not poison the measurements.
 #   The default is 1.2 sec which is a good all-round choice.
+
+
+# [adxl345_probe]
+# probe_pin: btt_adxl345:gpio4  # or btt_adxl345:gpio3 for `int2`
+# int_pin: int1 # select either int1 or int2
+# tap_thresh: 12000 # this needs to be tuned
+# tap_dur: 0.01 # this needs to be tuned
+# speed: 20 # this needs to be tuned
+# # Adjust this to your liking
+# samples: 3
+# sample_retract_dist: 3.0
+# samples_result: median
+# samples_tolerance: 0.01
+# samples_tolerance_retries: 20
