klipper: commit latest probe z offset and bed mesh after tuning

--- a/firmware/config/klipper/printer.cfg
+++ b/firmware/config/klipper/printer.cfg
@@ -253,28 +253,26 @@ max_temp: 135
 #*# pid_kd = 90.217
 #*#
 #*# [bltouch]
-#*# z_offset = 3.314
+#*# z_offset = 3.289
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.103332, -0.116739, -0.083787, -0.070480, -0.064045, -0.055738, -0.043056
-#*# 	  -0.027029, -0.050436, -0.019359, -0.019802, -0.022117, -0.004435, -0.013628
-#*# 	  -0.049477, -0.048509, -0.009931, -0.000374, 0.006061, 0.019368, 0.023300
-#*# 	  -0.031807, -0.047714, -0.013512, -0.014580, -0.021270, 0.002662, -0.006531
-#*# 	  -0.006513, -0.031170, -0.000092, -0.004285, -0.001600, -0.000168, -0.001861
-#*# 	  0.021905, -0.012127, 0.017076, 0.010383, 0.008693, 0.012000, 0.022182
-#*# 	  0.006573, -0.017459, 0.024869, 0.007551, 0.013986, 0.016668, 0.026225
-#*# x_count = 7
-#*# y_count = 7
+#*# 	  0.090892, 0.079220, 0.134373, 0.137149, 0.149925
+#*# 	  0.049096, 0.049299, 0.098827, 0.109102, 0.097503
+#*# 	  -0.035082, -0.023004, 0.018399, 0.012425, 0.012701
+#*# 	  -0.059016, -0.081313, -0.052410, -0.075259, -0.060608
+#*# 	  -0.112950, -0.141497, -0.110720, -0.122319, -0.108293
+#*# x_count = 5
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
 #*# min_x = 10.0
-#*# max_x = 173.98
+#*# max_x = 174.0
 #*# min_y = 18.0
-#*# max_y = 199.97999999999996
+#*# max_y = 200.0
 #*#
 #*# [bed_mesh Glass Cold]
 #*# version = 1
